# private_personalized_ad

./: .gitignore  CMakeLists.txt  DESIGN.md  README.md  ads.csv  serialization.cpp
SealPIR/: Makefile  pir.cpp  pir_server.hpp
server/: Makefile  server.cpp
src/: CMakeLists.txt  Makefile  ad.cpp  ad.h  ad.hpp  ad_server.cpp  ads.csv  client  clientSock.cpp  client_base.cpp  client_sock.cpp  create_ads.py  custom_serialization.cpp  custom_serialization.hpp  dummy_user.cpp  main.cpp  main_server.cpp  main_user.cpp  pir.cpp  pir.hpp  pir_client.cpp  pir_client.hpp  pir_server.cpp  pir_server.hpp  serialization.cpp  serialization.h  server  server.cpp  serverSock.cpp  server_base.cpp  server_sock.cpp  test.cpp  user.cpp  user.h  user.hpp
user/: Makefile  ad.cpp  user.cpp
